--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <!-- Intro -->
+                    <h2>Résumé</h2>
+                    <p>&mdash; For almost ninety years I’ve walked among my kind, and yours… all the time thinking I was complete in myself, not realizing what I was seeking. And not finding anything, because you weren’t alive yet. You are the only one who has ever touched my heart. It will always be yours…</p>
                   </div>
                 </div>
               </div>
