--- a/index.html
+++ b/index.html
@@ -95,7 +95,118 @@
             </div>
             <div class="row">
               <div class="ten wide column">
-                <!-- Experience -->
+                <h3>Experience</h3>
+								<h6>Timeline</h6>
+								<ul class="timeline">
+									<li>
+										<p>
+											<strong>1918</strong>
+										</p>
+										<ul>
+											<li>
+												<em>In September</em>, the Spanish influenza epidemic kills my parents; I was later saved and turned into a vampire by Carlisle, thus forming the Olympic coven.
+											</li>
+										</ul>
+									</li>
+									<li>
+										<p>
+											<strong>2005</strong>
+										</p>
+										<ul>
+											<li>
+												<em>March 18th</em> - Bella Swan and I first meet at Forks High School.
+											</li>
+											<li>
+												<em>March 25th</em> - Bella is saved by me in a near-fatal car crash.
+											</li>
+										</ul>
+									</li>
+									<li>
+										<p>
+											<strong>2006</strong>
+										</p>
+										<ul>
+											<li>
+												<em>March 19 - St. Marcus Day</em>: I tried to reveal the existence of vampires in Volterra, Italy.
+											</li>
+											<li>
+												<em>June 13th</em> - I proposed to Bella.
+											</li>
+											<li>
+												<em>August 13th</em> - Me and Bella are married; during their honeymoon in Isle Esme, we conceived a daughter.
+											</li>
+											<li>
+												<em>September 11th</em> - My daughter Renesmee is born.
+											</li>
+											<li>
+												<em>December 31</em> - The Cullens, along with our allies, confront the Volturi.
+											</li>
+										</ul>
+									</li>
+									<li>
+										<p>
+											<strong>2007</strong>
+										</p>
+										<ul>
+											<li>
+												<em>January 1st</em> - Bella lowers her mental shield for the first time, allowing me to read her thoughts.
+											</li>
+										</ul>
+									</li>
+<h3>Personal life</h3>
+									<p><em>It's my and Bella's lovestory, obviously</em> &#x1F444;</p>
+									<li>
+										<p>
+											<strong>Twilight</strong>
+										</p>
+										<p>
+											<em>"And so the lion fell in love with the lamb."<br> 
+											"What a stupid lamb."<br>
+											"What a sick, masochistic lion."<br>
+											</em> 
+											―Bella and I realize our feelings for one another.
+										</p>
+									</li>
+									<li>
+										<p>
+											<strong>Midnight Sun</strong>
+										</p>
+										<p>
+											In <em>Midnight Sun</em>, I describe how I became frustrated with my inability to read Bella's thoughts, my relentlessly overwhelming desire for her blood and my eventual discovery of love for her.
+										</p>
+									</li>	
+									<li>
+										<p>
+											<strong>New Moon</strong>
+										</p>
+										<p>
+											<em>"This is the last time you'll ever see me. I won't come back. And you can go on with your life without any interference from me. It'll be like I never existed, I promise."
+											</em><br>
+											―My goodbye to Bella.
+										</p>
+									</li>
+									<li>
+										<p>
+											<strong>Eclipse</strong>
+										</p>
+										<p>
+											In the next few months, I visit Bella through curfew hours and then sneak into her room at night.
+											When <em>Eclipse</em> begins, Bella receives a letter from Jacob, saying that he misses her too, but that it doesn't change anything. She is saddened by this, but I visit her, and her mood greatly improves.
+										</p>
+									</li>
+									<li>
+										<p>
+											<strong>Breaking Dawn</strong>
+										</p>
+										<p>
+											<em>
+											"How many times had I stared at Edward and marveled over his beauty? How many hours―days, weeks, of my life had I spent dreaming about what I then deemed to be perfection? I thought I'd known his face better than my own. I'd thought this was the one sure physical thing in my whole world: the flawlessness of Edward's face. I may as well have been blind. For the first time, with the dimming shadows and limiting weakness of humanity taken off my eyes, I saw his face. I gasped and then struggled to find the right words. I needed better words."
+											</em><br> 
+											―Bella, upon seeing Edward for the first time after she became a vampire.
+										</p>
+									</li>
+
+								</ul>
               </div>
               <div class="six wide column">
                 <!-- Languages -->
