--- a/index.html
+++ b/index.html
@@ -209,7 +209,15 @@
 								</ul>
               </div>
               <div class="six wide column">
-                <!-- Languages -->
+                <section>
+									<h3>Languages</h3>
+									<p class="tags small">
+										<span class="language" lang="en"
+											>&#x1f1fa;&#x1f1f8; English</span>
+										<span class="language" lang="it"
+											> &#x1f1ee;&#x1f1f9; Italiano</span>
+									</p>
+								</section>
                 <!-- Skills -->
                 <!-- Character -->
                 <!-- Likes -->
