Add Skills, Likes and Dislikes

--- a/index.html
+++ b/index.html
@@ -218,10 +218,33 @@
 											> &#x1f1ee;&#x1f1f9; Italiano</span>
 									</p>
 								</section>
-                <!-- Skills -->
-                <!-- Character -->
-                <!-- Likes -->
-                <!-- Dislikes -->
+                <section>
+									<h3>Skills</h3>
+									<p class="tags small">
+										<span class="nowrap">PLAYING PIANO</span> SPARKLING
+										<span class="nowrap">READING MINDS</span> <br>
+										QUICK HEALING
+										<span class="nowrap">SUPERHUMAN STRENGHTS</span>
+									</p>
+								</section>
+								<section>
+									<h3>Likes&#x1f603;</h3>
+									<p class="tags small">
+										<span class="nowrap">SPEED</span> BELLA
+										<span class="nowrap">BLOOD</span> OVERREACTING
+										<span class="nowrap">STALKING</span><br>
+										 GOOD CLOTHES
+										<span class="nowrap">KILLING ENEMIES</span> ATTACKING
+									</p>
+								</section>
+								<section>
+									<h3>Dislikes&#x1f61e;</h3>	
+									<p class="tags small">
+										<span class="nowrap">HEARTBEAT</span> WEREWOLVES
+										<span class="nowrap">SLEEP</span> COUNTRY MUSIC
+										<span class="nowrap">NOT BEING ABLE TO READ BELLA’S MIND</span> JACOB
+									</p>
+								</section>
                 <!-- Wants -->
                 <!-- Education -->
                 <!-- Articles -->
