Add Wants, Characted and Moto

--- a/index.html
+++ b/index.html
@@ -245,9 +245,24 @@
 										<span class="nowrap">NOT BEING ABLE TO READ BELLA’S MIND</span> JACOB
 									</p>
 								</section>
-                <!-- Wants -->
-                <!-- Education -->
-                <!-- Articles -->
+                <section>
+									<h3>Wants&#x1F36F;</h3>
+									<p class="tags small bulleted">
+										TO TAKE A NAP, 'CAUSE I HAVEN'T TAKEN ONE SINCE SEPTEMBER 1918 
+									</p>
+								</section>
+								<section>
+									<h3>Character</h3>
+									<p>
+										<span class="nowrap">KIND</span> PRINCE CHARMING
+										<span class="nowrap">POLITE</span> PROTECTIVE
+										<span class="nowrap">A BIT STUBBORN, BUT LOVING GENTLEMAN</span> 
+									</p>
+								</section>
+								<section>
+									<h3>Moto</h3>
+									<em>"No measure of time with you will be long enough, but we'll start with forever."</em>
+								</section>
               </div>
             </div>
           </div>
