Revert "Patch/content/secondary"

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
-                <div class="avatar-wrapper">
-                  <object class="avatar" data="./assets/images/avatar.svg" role="img" aria-label="My profile picture"></object>
-                </div>
+                <!-- Avatar -->
               </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
@@ -211,60 +209,14 @@
 								</ul>
               </div>
               <div class="six wide column">
-                <section>
-									<h3>Languages</h3>
-									<p class="tags small">
-										<span class="language" lang="en"
-											>&#x1f1fa;&#x1f1f8; English</span>
-										<span class="language" lang="it"
-											> &#x1f1ee;&#x1f1f9; Italiano</span>
-									</p>
-								</section>
-                <section>
-									<h3>Skills</h3>
-									<p class="tags small">
-										<span class="nowrap">PLAYING PIANO</span> SPARKLING
-										<span class="nowrap">READING MINDS</span> <br>
-										QUICK HEALING
-										<span class="nowrap">SUPERHUMAN STRENGHTS</span>
-									</p>
-								</section>
-								<section>
-									<h3>Likes&#x1f603;</h3>
-									<p class="tags small">
-										<span class="nowrap">SPEED</span> BELLA
-										<span class="nowrap">BLOOD</span> OVERREACTING
-										<span class="nowrap">STALKING</span><br>
-										 GOOD CLOTHES
-										<span class="nowrap">KILLING ENEMIES</span> ATTACKING
-									</p>
-								</section>
-								<section>
-									<h3>Dislikes&#x1f61e;</h3>	
-									<p class="tags small">
-										<span class="nowrap">HEARTBEAT</span> WEREWOLVES
-										<span class="nowrap">SLEEP</span> COUNTRY MUSIC
-										<span class="nowrap">NOT BEING ABLE TO READ BELLA’S MIND</span> JACOB
-									</p>
-								</section>
-                <section>
-									<h3>Wants&#x1F36F;</h3>
-									<p class="tags small bulleted">
-										TO TAKE A NAP, 'CAUSE I HAVEN'T TAKEN ONE SINCE SEPTEMBER 1918 
-									</p>
-								</section>
-								<section>
-									<h3>Character</h3>
-									<p>
-										<span class="nowrap">KIND</span> PRINCE CHARMING
-										<span class="nowrap">POLITE</span> PROTECTIVE
-										<span class="nowrap">A BIT STUBBORN, BUT LOVING GENTLEMAN</span> 
-									</p>
-								</section>
-								<section>
-									<h3>Moto</h3>
-									<em>"No measure of time with you will be long enough, but we'll start with forever."</em>
-								</section>
+                <!-- Languages -->
+                <!-- Skills -->
+                <!-- Character -->
+                <!-- Likes -->
+                <!-- Dislikes -->
+                <!-- Wants -->
+                <!-- Education -->
+                <!-- Articles -->
               </div>
             </div>
           </div>
