--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
   </head>
   <body>
-    <main>
+	<header>
+		<div class="credits">
+			Inspired by <a href="https://en.wikipedia.org/wiki/Robert_Pattinson" rel="external">Robert Pattinson</a> &#x1F308;
+		</div>
+	</header>
+	<main>
       <article>
         <div class="page" style="border-color: midnightblue;">
           <div class="stackable grid">
