--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Résumé</title>
@@ -270,6 +270,11 @@
           </div>
         </div>
       </article>
-    </main>
+	</main>
+	<footer>
+		<span>Thank you for scrolling down! <em>‘See you soon’</em>&#x1F970;</span>
+	</footer>
+	<script>
+	</script>
   </body>
 </html>
