Update Experience (closes #32)

--- a/index.html
+++ b/index.html
@@ -103,7 +103,33 @@
             <div class="row">
               <div class="ten wide column">
                 <h3>Experience</h3>
-								<h6>Timeline</h6>
+				<h6>Working Experience</h6>
+				<ul class="timeline">
+					<li class="highlighted">
+						<p>
+							<em>My star career</em>
+						</p>
+						<p>
+							<strong>I need a producer, 'cause I ain't getting any younger...</strong>
+						</p>
+						<ol>
+							<li class="details">
+								<input type="checkbox" id="project-2" />
+								<label for="project-2" class="summary">
+									Here's where I played:
+								</label>
+								<div class="labels">
+									<span rel="external" class="label">Twilight</span>
+									<span rel="external" class="label">New Moon</span>
+									<span rel="external" class="label">Eclipse</span>
+									<span rel="external" class="label">Breaking Dawn: Part 1</span>
+									<span rel="external" class="label">Breaking Dawn: Part 2</span>
+								</div>
+							</li>
+						</ol>
+					</li>
+				</ul>
+				<h6>What I've been through</h6>
 								<ul class="timeline">
 									<li>
 										<p>
