Add stylesheet styles.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Résumé</title>
-    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+	<link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+	<link rel="stylesheet" href="assets/styles/styles.css">
   </head>
   <body>
 	<header>
@@ -91,7 +92,7 @@
                   <div class="sixteen wide column">
                     <h2>Résumé</h2>
                     <p>&mdash; For almost ninety years I’ve walked among my kind, and yours… all the time thinking I was complete in myself, not realizing what I was seeking. And not finding anything, because you weren’t alive yet. You are the only one who has ever touched my heart. It will always be yours…</p>
-                  </div>
+				</div>
                 </div>
               </div>
             </div>
