Add background toggle

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+	<meta charset="UTF-8" />
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Résumé</title>
 	<link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
 	<link rel="stylesheet" href="assets/styles/styles.css">
@@ -12,7 +13,7 @@
 			Inspired by <a href="https://en.wikipedia.org/wiki/Robert_Pattinson" rel="external">Robert Pattinson</a> &#x1F308;
 		</div>
 	</header>
-	<main>
+	<main class="bg" id="main">
       <article>
         <div class="page" style="border-color: midnightblue;">
           <div class="stackable grid">
@@ -92,6 +93,7 @@
                   <div class="sixteen wide column">
                     <h2>Résumé</h2>
                     <p>&mdash; For almost ninety years I’ve walked among my kind, and yours… all the time thinking I was complete in myself, not realizing what I was seeking. And not finding anything, because you weren’t alive yet. You are the only one who has ever touched my heart. It will always be yours…</p>
+					<p class="additional-intro">*In case you want to catch the <button class="hvr-sweep-to-right bg-toggle" onclick="toggle()">vibe</button></p>
 				</div>
                 </div>
               </div>
@@ -307,6 +309,10 @@
 		<span>Thank you for scrolling down! <em>‘See you soon’</em>&#x1F970;</span>
 	</footer>
 	<script>
+  function toggle() {
+	var main = document.getElementById("main");
+	main.classList.toggle('bg-img')
+  }
 	</script>
   </body>
 </html>
