Validate index.html

--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 									Here's where I played:
 								</label>
 								<div class="labels">
-									<span rel="external" class="label">Twilight</span>
-									<span rel="external" class="label">New Moon</span>
-									<span rel="external" class="label">Eclipse</span>
-									<span rel="external" class="label">Breaking Dawn: Part 1</span>
-									<span rel="external" class="label">Breaking Dawn: Part 2</span>
+									<span class="label">Twilight</span>
+									<span class="label">New Moon</span>
+									<span class="label">Eclipse</span>
+									<span class="label">Breaking Dawn: Part 1</span>
+									<span class="label">Breaking Dawn: Part 2</span>
 								</div>
 							</li>
 						</ol>
@@ -189,8 +189,10 @@
 											</li>
 										</ul>
 									</li>
-<h3>Personal life</h3>
-									<p><em>It's my and Bella's lovestory, obviously</em> &#x1F444;</p>
+								</ul>
+								<h3>Personal life</h3>
+								<p><em>It's my and Bella's lovestory, obviously</em> &#x1F444;</p>
+								<ul class="timeline">
 									<li>
 										<p>
 											<strong>Twilight</strong>
